--- a/src/components/edit-control-panel.yml
+++ b/src/components/edit-control-panel.yml
@@ -6,7 +6,7 @@ statusIconTooltipDirty:
   de: Änderungen nicht gespeichert
 statusIconTooltipInvalid:
   en: Please correct all errors before saving
-  de: Bitte korrigieren Sie alle Fehler vor dem Speichern
+  de: Bitte korrigier alle Fehler vor dem Speichern
 editMetadata:
   en: Edit metadata
   de: Metadaten bearbeiten
