--- a/src/components/email-form-item.yml
+++ b/src/components/email-form-item.yml
@@ -1,6 +1,6 @@
 enterEmail:
   en: Please enter an email address
-  de: Bitte geben Sie eine E-Mail-Adresse an
+  de: Bitte gib eine E-Mail-Adresse an
 emailIsInUse:
   en: The email address is already registered
   de: Die E-Mail-Adresse ist bereits vergeben
