--- a/src/components/news-tab.yml
+++ b/src/components/news-tab.yml
@@ -1,9 +1,9 @@
 info:
   en: Here you can find news about the website and your latest activities.
-  de: Hier finden Sie Neuigkeiten über die Website und Ihre letzten Aktivitäten.
+  de: Hier findest du Neuigkeiten über die Website und deine letzten Aktivitäten.
 latestActivitiesHeader:
   en: Your latest activities
-  de: Ihre letzten Aktivitäten
+  de: Deine letzten Aktivitäten
 documentCreatedActivity:
   en: New document created
   de: Neues Dokument erstellt
