--- a/src/components/pages/dashboard.yml
+++ b/src/components/pages/dashboard.yml
@@ -15,10 +15,10 @@ roomsTabTitle:
   de: Räume
 storageTabTitle:
   en: Your storage plan
-  de: Ihr Speicherplan
+  de: Dein Speicherplan
 storageTabInfo:
   en: Here you can find details about your storage plan and current space status.
-  de: Hier finden Sie Details über Ihren Speicherplan und Ihre aktuelle Speichernutzung.
+  de: Hier findest du Details über deinen Speicherplan und deine aktuelle Speichernutzung.
 noStoragePlan:
   en: There is no storage plan associated with your account.
-  de: Mit Ihrem Konto ist kein Speicherplan verbunden.
+  de: Mit deinem Konto ist kein Speicherplan verbunden.
