--- a/src/components/room-invitation-creation-modal.yml
+++ b/src/components/room-invitation-creation-modal.yml
@@ -3,4 +3,4 @@ newRoomInvitation:
   de: Neue Einladung
 emailRequired:
   en: Please specify an email address
-  de: Bitte geben Sie eine E-Mail-Adresse an
+  de: Bitte gib eine E-Mail-Adresse an
