--- a/src/components/rooms-tab.yml
+++ b/src/components/rooms-tab.yml
@@ -1,6 +1,6 @@
 info:
   en: Here you find all the rooms you have created and the rooms that you are a member of.
-  de: Hier finden Sie alle Räume, die Sie erstellt haben und in denen Sie Mitglied sind.
+  de: Hier findest du alle Räume, die du erstellt hast und in denen du Mitglied bist.
 joined:
   en: Joined
   de: Eingetreten
@@ -21,14 +21,14 @@ sortedByRole:
   de: Nach Rolle sortiert
 ownedRoomsHeadline:
   en: Rooms that you created
-  de: Räume, die Sie erstellt haben
+  de: Räume, die du erstellt hast
 memberRoomsHeadline:
   en: Rooms that you are a member of
-  de: Räume, in denen Sie Mitglied sind
+  de: Räume, in denen du Mitglied bist
 noOwnedRooms:
   en: You have not created any rooms yet.
-  de: Sie haben noch keine Räume erstellt.
+  de: Du hast noch keine Räume erstellt.
 noMemberRooms:
   en: You are currently not a member in any room. To become a member of a room, you need to be invited by the room owner.
-  de: Sie sind zur Zeit kein Mitglied eines Raumes. Um Mitglied in einem Raum zu werden, müssen Sie vom Raum-Eigentümer eingeladen werden.
+  de: Du bist zur Zeit kein Mitglied eines Raumes. Um Mitglied in einem Raum zu werden, musst du vom Raum-Eigentümer eingeladen werden.
 
