--- a/src/ui/validation.yml
+++ b/src/ui/validation.yml
@@ -1,12 +1,12 @@
 urlRequired:
   en: Please specify a URL
-  de: Bitte geben Sie eine Adresse an
+  de: Bitte gib eine Adresse an
 urlInvalid:
   en: Please specify a URL with a valid format
-  de: Bitte geben Sie eine Adresse im gültigen Format an
+  de: Bitte gib eine Adresse im gültigen Format an
 urlInvalidProtocol:
   en: Please specify an address starting with {allowedProtocols}
-  de: Bitte geben Sie eine Adresse an, die mit {allowedProtocols} beginnt
+  de: Bitte gib eine Adresse an, die mit {allowedProtocols} beginnt
 markdownBoldOrItalicWithinHeaders:
   en: Bold or italic should not be used within headers
   de: Überschriften sollten keine fette oder kursive Auszeichnung enthalten
