--- a/src/components/displayName-form-item.yml
+++ b/src/components/displayName-form-item.yml
@@ -1,6 +1,6 @@
 enterDisplayName:
   en: Please enter a display name
-  de: Bitte geben Sie einen Anzeigenamen an
+  de: Bitte gib einen Anzeigenamen an
 displayNameIsTooShort:
   en: The display name must be at least {length} characters long
   de: Der Anzeigename muss mindestens {length} Zeichen lang sein
