--- a/src/components/favorites-tab.yml
+++ b/src/components/favorites-tab.yml
@@ -1,12 +1,12 @@
 info:
   en: Here you can find all your personal favorites. By clicking on the star icon you can remove favorite items.
-  de: Hier finden Sie Ihre persönlichen Favoriten. Durch Klick auf das Sternsymbol können Sie Favoriten entfernen.
+  de: Hier findest du deine persönlichen Favoriten. Durch Klick auf das Sternsymbol kannst du Favoriten entfernen.
 favoriteUsers:
   en: Users you have added to favorites
-  de: Benutzer, die Sie zu den Favoriten hinzugefügt haben
+  de: Benutzer, die du zu den Favoriten hinzugefügt hast
 favoriteRooms:
   en: Rooms you have added to favorites
-  de: Räume, die Sie zu den Favoriten hinzugefügt haben
+  de: Räume, die du zu den Favoriten hinzugefügt hast
 favoriteDocuments:
   en: Documents you have added to favorites
-  de: Dokumente, die Sie zu den Favoriten hinzugefügt haben
+  de: Dokumente, die du zu den Favoriten hinzugefügt hast
