--- a/src/components/markdown-help.yml
+++ b/src/components/markdown-help.yml
@@ -8,9 +8,9 @@ inlineTooltipHtml:
     </div>
   de: |
     <div>
-      <p>In diesem Feld können Sie die folgenden Formatierungsoptionen verwenden:</p>
+      <p>In diesem Feld kannst du die folgenden Formatierungsoptionen verwenden:</p>
       <p>*kursiv* oder _kursiv_<br />**fett** oder __fett__</p>
-      <p>Links können Sie in diesem Format eingeben:</p>
+      <p>Links kannst du in diesem Format eingeben:</p>
       <p>[Link-Text](Link-Adresse)</p>
     </div>
 blockTooltipText:
@@ -18,7 +18,7 @@ blockTooltipText:
   de: Bitte klicken, um Formatierungsoptionen für dieses Feld anzuzeigen
 blockHelpTableHeaderLeft:
   en: How you write it
-  de: Wie Sie es schreiben
+  de: Wie du es schreibst
 blockHelpTableHeaderRight:
   en: How it will look
   de: Wie es dargestellt wird
@@ -34,7 +34,7 @@ blockHelpTableFoot:
   de: |
     Diese Website benutzt *Markdown* zur Textformatierung. Genauer gesagt folgt sie der sogenannten *CommonMark*-Spezifikation.
     Markdown bietet grundlegende Formatierungsmöglichkeiten, ohne dabei den Text durch komplizierte Regeln unlesbar zu machen.
-    Für mehr Informationen und eine ausführliche Beschreibung besuchen Sie bitte <https://commonmark.org/>.
+    Für mehr Informationen und eine ausführliche Beschreibung besuch bitte <https://commonmark.org/>.
     Wir möchten darauf hinweisen, dass die Website der CommonMark-Spezifikation in allen Punkten außer der Benutzung von HTML folgt, welche nicht zugelassen ist.
 blockHelpMarkdown:
   en: |
@@ -100,19 +100,19 @@ blockHelpMarkdown:
 
     As you have seen, some characters like **_**, **#** or __*__ have special meaning in certain positions. In order to use them as a normal character, you have to prepend a backslash. For example, *this text is italic*, but \*this is just text with asterisks around it\*.
   de: |
-    Dies ist ein einfacher Absatz. Wie Sie sehen, ungeachtet davon, wie viele                  Leerzeichen
+    Dies ist ein einfacher Absatz. Wie du siehst, ungeachtet davon, wie viele                  Leerzeichen
     oder
     Zeilenumbrüche
-    Sie eingeben, werden diese stets in ein einzelnes Leerzeichen umgewandelt.
+    du eingibst, werden diese stets in ein einzelnes Leerzeichen umgewandelt.
 
     Um einen tatsächlichen Zeilenumbruch herzustellen, \
-    beenden Sie die Zeile mit mehreren Leerzeichen<space><space>
+    beend die Zeile mit mehreren Leerzeichen<space><space>
     oder, genau wie hier \
     mit einem Backslash.
 
-    Um einen neuen Absatz zu beginnen, lassen sie eine Zeile über dem entsprechenden Text leer.
+    Um einen neuen Absatz zu beginnen, lass eine Zeile über dem entsprechenden Text leer.
 
-    Setzen Sie Text zwischen zwei Sternchen, *um diesen kursiv darzustellen*, oder zwischen zwei Doppelsternchen für **Fettdruck**. Alternativ dazu können Sie auch _Unterstriche_ bzw. __doppelte Unterstriche__ verwenden. _Auch **Kombinationen** sind möglich_.
+    Setz Text zwischen zwei Sternchen, *um diesen kursiv darzustellen*, oder zwischen zwei Doppelsternchen für **Fettdruck**. Alternativ dazu kannst du auch _Unterstriche_ bzw. __doppelte Unterstriche__ verwenden. _Auch **Kombinationen** sind möglich_.
 
     # Dies ist eine Überschrift der ersten Ebene
 
@@ -123,19 +123,19 @@ blockHelpMarkdown:
     Es gibt bis zu sechs Überschriftenebenen, jedoch ist es ratsam, auf Websites möglichst auf eine solch tiefe Hierarchie zu verzichten.
 
     1. Dies ist eine nummerierte Liste
-    2. Sie können
+    2. Du kannst
         1. mehrere Ebenen verwenden,
-        2. indem Sie jede weitere Ebene durch vier Leerzeichen einrücken
-    42. Wie Sie sehen, spielt die tatsächliche Zahl vor dem Listenpunkt keine Rolle, die Liste beginnt immer mit der Zahl vor dem ersten Punkt und wird dann hochgezählt.
+        2. indem du jede weitere Ebene durch vier Leerzeichen einrückst
+    42. Wie du siehst, spielt die tatsächliche Zahl vor dem Listenpunkt keine Rolle, die Liste beginnt immer mit der Zahl vor dem ersten Punkt und wird dann hochgezählt.
 
     * Dies ist eine unnummerierte Liste
-    * Sie können auch Trennstriche statt der Sternchen verwenden:
+    * Du kannst auch Trennstriche statt der Sternchen verwenden:
         - Verschachtelungen sind hier genauso möglich
-        - Genau wie bei der nummerierten Liste müssen Sie die Unterpunkte lediglich um vier Leerzeichen einrücken
+        - Genau wie bei der nummerierten Liste musst du die Unterpunkte lediglich um vier Leerzeichen einrücken
 
     > ### Dies ist ein Blockzitat
     >
-    > Um es zu erzeugen, starten Sie die Zeile mit dem Zeihen **>**
+    > Um es zu erzeugen, start die Zeile mit dem Zeihen **>**
     >
     > *(Das Zitat erstreckt sich über alle aufeinander folgenden Zeilen, die mit **>** beginnen)*
 
@@ -145,20 +145,20 @@ blockHelpMarkdown:
 
     ---
 
-    Anstelle der Sternchen können Sie gleichermaßen Trennstriche (wie oben) bzw. Unterstriche (wie unten) verwenden.
+    Anstelle der Sternchen kannst du gleichermaßen Trennstriche (wie oben) bzw. Unterstriche (wie unten) verwenden.
 
     ___
 
-    Um einen Link einzufügen, müssen Sie den Link-Text mit eckigen Klammern umschließen, direkt gefolgt von der Link-Adresse in runden Klammern, so wie [hier](https://de.wikipedia.org/wiki/Wolfgang_Amadeus_Mozart).
+    Um einen Link einzufügen, musst du den Link-Text mit eckigen Klammern umschließen, direkt gefolgt von der Link-Adresse in runden Klammern, so wie [hier](https://de.wikipedia.org/wiki/Wolfgang_Amadeus_Mozart).
 
     Das Einfügen eines Bildes funktioniert auf dieselbe Weise, jedoch mit einem vorangestelltem Ausrufezeichen. Der Text zwichen den eckigen Klammern wird als Alternative angezeigt, falls das Bild nicht geladen oder dargestellt werden kann (wie im zweiten Bild unten), zum Beispiel:
 
     ![Bild von W. A. Mozart](https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Mozart-small.jpg/202px-Mozart-small.jpg)
     ![Bild von W. A. Mozart](https://upload.wikimedia.org/wikipedia/this-is-an-intentionally-wrong-address.jpg)
 
-    Bitte beachten Sie, dass Link- bzw. Bildadressen keine Leerzeichen enthalten dürfen, um korrekt dargestellt zu werden.
+    Bitte beacht, dass Link- bzw. Bildadressen keine Leerzeichen enthalten dürfen, um korrekt dargestellt zu werden.
 
-    Darüberhinaus können Sie auf die gleiche Weise in einigen Feldern (gekennzeichnet mit der Option „Medien wiedergeben“), anstelle von Bildern auch Video- bzw. Audio-Dateien einbinden.
+    Darüberhinaus kannst du auf die gleiche Weise in einigen Feldern (gekennzeichnet mit der Option „Medien wiedergeben“), anstelle von Bildern auch Video- bzw. Audio-Dateien einbinden.
 
-    Wie Sie sehen, haben manche Zeichen wie **_**, **#** oder __*__ eine spezielle Bedeutung, wenn diese in bestimmten Positionen stehen. Um diese Zeichen dennoch als normalen Text darzustellen, müssen Sie durch einen vorangestellten Backslash von dieser Spezialbedeutung entbunden werden. Beispielsweise *ist dieser Text kursiv*, aber \*dieser Text lediglich mit Sternchen umgeben\*.
+    Wie du siehst, haben manche Zeichen wie **_**, **#** oder __*__ eine spezielle Bedeutung, wenn diese in bestimmten Positionen stehen. Um diese Zeichen dennoch als normalen Text darzustellen, musst du durch einen vorangestellten Backslash von dieser Spezialbedeutung entbunden werden. Beispielsweise *ist dieser Text kursiv*, aber \*dieser Text lediglich mit Sternchen umgeben\*.
 
