--- a/src/components/pages/complete-password-reset.yml
+++ b/src/components/pages/complete-password-reset.yml
@@ -3,10 +3,10 @@ savePassword:
   de: Kennwort speichern
 passwordChangedSuccessfully:
   en: Your password was changed successfully.
-  de: Ihr Kennwort wurde erfolgreich geändert.
+  de: Dein Kennwort wurde erfolgreich geändert.
 redirectMessage:
   en: You will be redirected to the <0>login page</0> in {seconds, plural, =1 {# second} other {# seconds}}.
-  de: Sie werden in {seconds, plural, =1 {# Sekunde} other {# Sekunden}} auf die <0>Anmeldeseite</0> weitergeleitet.
+  de: Du wirst in {seconds, plural, =1 {# Sekunde} other {# Sekunden}} auf die <0>Anmeldeseite</0> weitergeleitet.
 passwordResetFailure:
   en: The password reset code is invalid or expired.
   de: Der Kennwortänderungs-Code ist ungültig oder abgelaufen.
