--- a/src/components/pages/reset-password.yml
+++ b/src/components/pages/reset-password.yml
@@ -1,22 +1,22 @@
 enterEmail:
   en: Please enter an email address
-  de: Bitte geben Sie eine E-Mail-Adresse an
+  de: Bitte gib eine E-Mail-Adresse an
 emailIsInvalid:
   en: The value you provided is not a valid email address
-  de: Ihre Eingabe ist keine gültige E-Mail-Adresse
+  de: Deine Eingabe ist keine gültige E-Mail-Adresse
 requestReset:
   en: Request reset
   de: Reset anfordern
 resetInProgressConfirmation:
   en: We have received your request.
-  de: Ihre Anfrage ist bei uns eingegangen.
+  de: Deine Anfrage ist bei uns eingegangen.
 resetInProgressNextSteps:
   en: |
     In case the provided email address is registered with our website, you will receive a
     message containing the next steps in order to generate a new password within the next minutes.
   de: |
-    Falls die von Ihnen angegebene E-Mail-Adresse bei uns registriert ist, werden Sie in Kürze eine
+    Falls die von dir angegebene E-Mail-Adresse bei uns registriert ist, wirst du in Kürze eine
     Nachricht von uns erhalten mit den nächsten Schritte, um ein neues Kennwort zu generieren.
 redirectMessage:
   en: You will be redirected to the <0>login page</0> in {seconds, plural, =1 {# second} other {# seconds}}.
-  de: Sie werden in {seconds, plural, =1 {# Sekunde} other {# Sekunden}} auf die <0>Anmeldeseite</0> weitergeleitet.
+  de: Du wirst in {seconds, plural, =1 {# Sekunde} other {# Sekunden}} auf die <0>Anmeldeseite</0> weitergeleitet.
