--- a/src/components/profile-tab.yml
+++ b/src/components/profile-tab.yml
@@ -1,6 +1,6 @@
 info:
   en: Here you can provide additional information about yourself. This information is publicly accessible through your <0>profile page</0>.
-  de: Hier können Sie zusätzliche Informationen zu Ihrer Person angeben. Die Daten sind auf Ihrer <0>Profilseite</0> öffentlich sichtbar.
+  de: Hier kannst du zusätzliche Informationen zu deiner Person angeben. Die Daten sind auf deiner <0>Profilseite</0> öffentlich sichtbar.
 personalInfoHeadline:
   en: Personal info
   de: Persönlichen Daten
@@ -18,7 +18,7 @@ introduction:
   de: Vorstellung
 updateSuccessMessage:
   en: Your profile was updated successfully.
-  de: Ihr Profil wurde erfolgreich aktualisiert.
+  de: Dein Profil wurde erfolgreich aktualisiert.
 avatarDescription:
   en: |
     Profile pictures are managed through the <0>Gravatar</0> internet service.
@@ -28,8 +28,8 @@ avatarDescription:
     If you agree, you can create a profile <0>here</0>.
   de: |
     Profilbilder werden durch den Internetdienst <0>Gravatar</0> verwaltet.
-    Ein Gravatar ist ein global verfügbarer Avatar (Globally Recognized Avatar), welcher mit Ihrer E-Mail-Adresse verknüpft ist.
+    Ein Gravatar ist ein global verfügbarer Avatar (Globally Recognized Avatar), welcher mit deiner E-Mail-Adresse verknüpft ist.
     Dieser Dienst kann dann von anderen Webseiten benutzt werden, um ein Profilbild zu einer E-Mail-Adresse anzuzeigen.
-    Beachten Sie bitte, dass unsere Website keinen Einfluss auf die Verwendung Ihrer Daten bei diesem Dienst hat.
-    Wenn Sie damit einverstanden sind, können Sie <0>hier</0> ein Profil erstellen.
+    Beacht bitte, dass unsere Website keinen Einfluss auf die Verwendung deiner Daten bei diesem Dienst hat.
+    Wenn du damit einverstanden bist, kannst du <0>hier</0> ein Profil erstellen.
 
