--- a/src/components/room-metadata-form.yml
+++ b/src/components/room-metadata-form.yml
@@ -1,6 +1,6 @@
 roomNameRequired:
   en: Please specify a room name
-  de: Bitte geben Sie einen Raumnamen an
+  de: Bitte gib einen Raumnamen an
 accessInfo:
   en: Public rooms are visible to all users, private rooms only to room members. Public rooms are currently not allowed.
   de: Öffentliche Räume sind für alle Benutzer sichtbar, private Räume nur für Raummitglieder. Öffentliche Räume sind im Moment nicht erlaubt.
