--- a/src/components/storage-location.yml
+++ b/src/components/storage-location.yml
@@ -12,7 +12,7 @@ searchOngoing:
   de: Suche …
 searchResultInfo:
   en: You are seeing results for the search term <0>{searchTerm}</0>
-  de: Sie sehen Ergebnisse für den Suchbegriff <0>{searchTerm}</0>
+  de: Du siehst Ergebnisse für den Suchbegriff <0>{searchTerm}</0>
 closeSearchResult:
   en: Back to directory view
   de: Zurück zur Verzeichnisansicht
