--- a/src/plugins/interactive-media/interactive-media.yml
+++ b/src/plugins/interactive-media/interactive-media.yml
@@ -30,7 +30,7 @@ addAnswer:
   de: Antwort hinzufügen
 addAnswerInfo:
   en: "In order to allow the user to review their knowledge, you can put the text above into a question and add possible answers here:"
-  de: "Um dem Benutzer die Möglichkeit zur Wissensüberprüfung zu geben, können Sie den Text oben als Frage formulieren und hier mögliche Antworten hinzufügen:"
+  de: "Um dem Benutzer die Möglichkeit zur Wissensüberprüfung zu geben, kannst du den Text oben als Frage formulieren und hier mögliche Antworten hinzufügen:"
 markCorrectAnswer:
   en: Mark as correct answer
   de: Als richtige Antwort markieren
@@ -48,7 +48,7 @@ results:
   de: Ergebnisse
 currentProgress:
   en: Your current progress
-  de: Ihr aktueller Fortschritt
+  de: Dein aktueller Fortschritt
 resultsSummary:
   en: "{answerCount} out of {totalCount} answered, out of which {correctCount} correctly and {incorrectCount} incorrectly."
   de: "{answerCount} von {totalCount} Fragen beantwortet, davon {correctCount} richtig und {incorrectCount} falsch."
