--- a/src/components/login-form.yml
+++ b/src/components/login-form.yml
@@ -6,4 +6,4 @@ enterPassword:
   de: Bitte gib dein Kennwort an
 loginFailed:
   en: Login failed. Please check your input.
-  de: Die Anmeldung ist fehlgeschlagen. Bitte überprüf deine Eingabe.
+  de: Die Anmeldung ist fehlgeschlagen. Bitte überprüfe deine Eingabe.
