--- a/src/components/pages/browser-not-supported.yml
+++ b/src/components/pages/browser-not-supported.yml
@@ -3,4 +3,4 @@ headerText:
  de: Wir haben festgestellt, dass deine Browserversion von unserer Website nicht unterstützt wird
 mainText:
  en: Please download a modern browser of your choice, some examples below
- de: Bitte lad einen modernen Browser deiner Wahl herunter, einige Beispiele unten
+ de: Bitte lade einen modernen Browser deiner Wahl herunter, einige Beispiele unten
