--- a/src/components/ui-language-dialog.yml
+++ b/src/components/ui-language-dialog.yml
@@ -3,4 +3,4 @@ title:
   de: Sprache auswählen
 explanation:
   en: Please select your preferred language for user interface elements like buttons, menus etc.
-  de: Bitte wähl deine bevorzugte Sprache für Oberflächenelemente wie z.B. Buttons, Menüs etc. aus.
+  de: Bitte wähle deine bevorzugte Sprache für Oberflächenelemente wie z.B. Buttons, Menüs etc. aus.
