--- a/src/plugins/pdf-viewer/pdf-viewer.yml
+++ b/src/plugins/pdf-viewer/pdf-viewer.yml
@@ -17,5 +17,5 @@ showTextOverlayInfo:
       be completely in sync with the PDF document due to technical limitations.
   de: |
       Zeigt eine transparente Schicht über dem Dokument an, die es Benutzern ermöglicht, Text zu selektieren.
-      Bitte beacht, dass die Zeichenplatzierung im überlagernden Text aus technischen Gründen nicht
+      Bitte beachte, dass die Zeichenplatzierung im überlagernden Text aus technischen Gründen nicht
       vollständig mit der des Dokuments übereinstimmen kann.
