--- a/src/components/profile-tab.yml
+++ b/src/components/profile-tab.yml
@@ -30,6 +30,6 @@ avatarDescription:
     Profilbilder werden durch den Internetdienst <0>Gravatar</0> verwaltet.
     Ein Gravatar ist ein global verfügbarer Avatar (Globally Recognized Avatar), welcher mit deiner E-Mail-Adresse verknüpft ist.
     Dieser Dienst kann dann von anderen Webseiten benutzt werden, um ein Profilbild zu einer E-Mail-Adresse anzuzeigen.
-    Beacht bitte, dass unsere Website keinen Einfluss auf die Verwendung deiner Daten bei diesem Dienst hat.
+    Beachte bitte, dass unsere Website keinen Einfluss auf die Verwendung deiner Daten bei diesem Dienst hat.
     Wenn du damit einverstanden bist, kannst du <0>hier</0> ein Profil erstellen.
 
