EDU-680 Adjust styling and add some info for the user

--- a/src/components/files-upload-overview.yml
+++ b/src/components/files-upload-overview.yml
@@ -13,3 +13,12 @@ startUpload:
 preprocessed:
   en: edited
   de: bearbeitet
+stage_uploadNotStarted:
+  en: The following file will be uploaded. You can edit images before upload by clicking on the pen icon.
+  de: Die folgenden Dateien werden hochgeladen. Du kannst Bilder vor dem Upload durch Klick auf das Stift-Symbol bearbeiten.
+stage_uploading:
+  en: Uploading ...
+  de: Hochladen ...
+stage_uploadFinished:
+  en: Upload finished
+  de: Upload beendet
