EDU-690 Fix reveal effect image loading order

--- a/src/plugins/image/image.yml
+++ b/src/plugins/image/image.yml
@@ -9,7 +9,7 @@ hoverOption:
   de: Hover
 revealOption:
   en: Reveal
-  de: Auflösung
+  de: Aufdeckung
 clipOption:
   en: Clip
   de: Zuschneiden
